--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </div>
       </div>
 
-      <!-- <button class="btn btn-large" id="generate">
+      <button class="btn btn-large" id="generate">
         Generate Password
-      </button> -->
+      </button>
     </div>
     <script src="script.js"></script>
   </body>
