--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <button class="btn btn-large" id="generate">
         Generate Password
       </button>
-      
+      <div></div>
     </div>
     <script src="script.js"></script>
   </body>
